--- a/simple index.html
+++ b/simple index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
-</head>git
+    <link rel="stylesheet" href="styles/blog.css">
+</head>
 <body>
-    
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur omnis delectus natus id placeat impedit in, dolorem aliquam aspernatur deleniti obcaecati? Praesentium, nam earum perspiciatis atque commodi ab porro repellat!</p>
+    </div>
 </body>
 </html>
