--- a/simple index.html
+++ b/simple index.html
@@ -10,6 +10,13 @@
     <div>
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur omnis delectus natus id placeat impedit in, dolorem aliquam aspernatur deleniti obcaecati? Praesentium, nam earum perspiciatis atque commodi ab porro repellat!</p>
+        <ol>
+            <li>tomato</li>
+            <li>carrot</li>
+            <li>sunflower</li>
+        </ol>
+
+    
     </div>
 </body>
 </html>
